# training-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/api/: get_submissions.rs  get_task.rs  login.rs  mod.rs  submit.rs
src/ui/: mod.rs
