[package]
name = "training-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
base64 = "0.21.0"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
